# Chawa-Whatsapp-Web-Client

./: .SRCINFO  PKGBUILD  README.md  install.sh  meson.build
data/: chawa.desktop
src/: main.c  notify.c  notify.h  window.c  window.h
